test/corpus/dollar_partition.txt
=================================================
Dollar partition simple
=================================================
SELECT $PARTITION.foo(10);
---
(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (partition_function
                            (dollar_partition_)
                            (id_)
                            (expression
                              (primitive_expression
                                (primitive_constant
                                  (decimal_))))))))))))))))))

=================================================
Dollar partition full
=================================================
SELECT AdventureWorks.$PARTITION.foo(10);
---
(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (partition_function
                            (id_)
                            (dollar_partition_)
                            (id_)
                            (expression
                              (primitive_expression
                                (primitive_constant
                                  (decimal_))))))))))))))))))
