test/corpus/execute_body.txt
=====================================
execute_body Return Status
=====================================
EXEC @foo=@sql
---
(tsql_file
  (batch
    (sql_clauses
      (another_statement
        (execute_statement
          (execute)
          (execute_body
            (LOCAL_ID_)
            (execute_var_string
              (LOCAL_ID_))))))))

=====================================
execute_body Impersonation TODO
:skip
=====================================
---
=====================================
execute_body Linked Server Pass Through TODO
:skip
=====================================
---
