test/corpus/execute_parameter.txt
=====================================
Execute Parameter Default
=====================================
sp_datatype_info DEFAULT
---
(tsql_file
  (execute_body_batch
    (func_proc_name_server_database_schema
      (func_proc_name_database_schema
        (func_proc_name_schema
          (id_))))
    (execute_statement_arg
      (execute_statement_arg_unnamed
        (execute_parameter
          (default))))))

=====================================
Execute Parameter id_
=====================================
sp_help @objname=spt_monitor
---
(tsql_file
  (execute_body_batch
    (func_proc_name_server_database_schema
      (func_proc_name_database_schema
        (func_proc_name_schema
          (id_))))
    (execute_statement_arg
      (execute_statement_arg_named
        (execute_parameter
          (id_))))))

=====================================
Execute Parameter LOCAL_ID NEEDS EXEC
=====================================
EXEC sp_help @objname=@foo;
---
(tsql_file
  (batch
    (sql_clauses
      (another_statement
        (execute_statement
          (execute)
          (execute_body
            (func_proc_name_server_database_schema
              (func_proc_name_database_schema
                (func_proc_name_schema
                  (id_))))
            (execute_statement_arg
              (execute_statement_arg_named
                (execute_parameter
                  (LOCAL_ID_))))))))))

=====================================
Execute Parameter Out NEEDS EXEC
=====================================
EXEC dbo.foo @foo='spt_monitor', @baz=@quux OUT;
---
(tsql_file
  (batch
    (sql_clauses
      (another_statement
        (execute_statement
          (execute)
          (execute_body
            (func_proc_name_server_database_schema
              (func_proc_name_database_schema
                (func_proc_name_schema
                  (id_)
                  (id_))))
            (execute_statement_arg
              (execute_statement_arg_named
                (execute_parameter
                  (constant)))
              (execute_statement_arg_named
                (execute_parameter
                  (LOCAL_ID_)
                  (OUTPUT))))))))))


=====================================
Execute Parameter Output NEEDS EXEC
=====================================
EXEC dbo.foo @foo='spt_monitor', @baz=@quux OUTPUT;
---
(tsql_file
  (batch
    (sql_clauses
      (another_statement
        (execute_statement
          (execute)
          (execute_body
            (func_proc_name_server_database_schema
              (func_proc_name_database_schema
                (func_proc_name_schema
                  (id_)
                  (id_))))
            (execute_statement_arg
              (execute_statement_arg_named
                (execute_parameter
                  (constant)))
              (execute_statement_arg_named
                (execute_parameter
                  (LOCAL_ID_)
                  (OUTPUT))))))))))

=====================================
Execute Parameter NULL NEEDS EXEC
=====================================
EXEC sp_help @objname=NULL;
---

(tsql_file
  (batch
    (sql_clauses
      (another_statement
        (execute_statement
          (execute)
          (execute_body
            (func_proc_name_server_database_schema
              (func_proc_name_database_schema
                (func_proc_name_schema
                  (id_))))
            (execute_statement_arg
              (execute_statement_arg_named
                (execute_parameter
                  (null_))))))))))
