test/corpus/execute_statement_arg.txt
=====================================
Execute Stmt Arg Full Named
=====================================
sp_configure @configname='default language', @configvalue=0
---
(tsql_file
  (execute_body_batch
    (func_proc_name_server_database_schema
      (func_proc_name_database_schema
        (func_proc_name_schema
          (id_))))
    (execute_statement_arg
      (execute_statement_arg_named
        (execute_parameter
          (constant))))
    (execute_statement_arg
      (execute_statement_arg_named
        (execute_parameter
          (constant))))))

=====================================
Execute Stmt Arg Mixed Named Continue
=====================================
sp_configure 'default language', @configvalue=0
---
(tsql_file
  (execute_body_batch
    (func_proc_name_server_database_schema
      (func_proc_name_database_schema
        (func_proc_name_schema
          (id_))))
    (execute_statement_arg
      (execute_statement_arg_unnamed
        (execute_parameter
          (constant))))
    (execute_statement_arg
      (execute_statement_arg_named
        (execute_parameter
          (constant))))))

=====================================
Execute Stmt Arg Unnamed
=====================================
sp_configure 'default language', 0
---
(tsql_file
  (execute_body_batch
    (func_proc_name_server_database_schema
      (func_proc_name_database_schema
        (func_proc_name_schema
          (id_))))
    (execute_statement_arg
      (execute_statement_arg_unnamed
        (execute_parameter
          (constant))))
    (execute_statement_arg
      (execute_statement_arg_unnamed
        (execute_parameter
          (constant))))))
